<resources>
    <string name="app_name">CodingSchool</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="title_home">Home</string>

    <!-- Bottom navigator -->
    <string name="bottom_review">Review</string>
    <string name="bottom_notice">Notice</string>
    <string name="bottom_home">@string/title_home</string>
    <string name="bottom_lecture">Lecture</string>
    <string name="bottom_cs">CS</string>

    <!-- Login Activity -->
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="error_invalid_email">Email 규격에 적합하지 않습니다.</string>
    <string name="error_invalid_password">Password 규격에 적합하지 않습니다.</string>
    <string name="error_incorrect_password">Email 또는 Password 인증에 실패하였습니다.</string>
    <string name="error_connect_server">서버 연결에 오류가 발생하였습니다.</string>

    <string name="signout_message">로그 아웃 하시겠습니까?</string>
    <string name="positive_button">확인</string>
    <string name="negative_button">취소</string>

    <!-- Drawer : activity_main_drawer.xml -->
    <string name="drawer_edu_center">Edu Center</string>
    <string name="drawer_lecture_progress">Lecture Progress</string>
    <string name="drawer_lecture_reviews">Lecture Reviews</string>
    <string name="drawer_course_overviews">Course Overviews</string>
    <string name="drawer_notice">Notice</string>
    <string name="drawer_all">All</string>
    <string name="drawer_my_messages">My Messages</string>
    <string name="drawer_public_notices">Public Notices</string>
    <string name="drawer_community">Community</string>
    <string name="drawer_cs">CS</string>
    <string name="drawer_blog">Blog</string>
    <string name="drawer_instagram">Instagram</string>
    <string name="drawer_facebook">Facebook</string>
    <string name="drawer_help">Help</string>
    <string name="drawer_me">Me</string>
    <string name="drawer_account">Account</string>
    <string name="drawer_purchases">Purchases</string>
    <string name="drawer_terms_privacy">Terms/Privacy</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_logout">Logout</string>

    <!-- Fragment -->
    <string name="fragment_home">HOME Fragment</string>
    <string name="fragment_lecture_progress">Lecture Progress Fragment</string>
    <string name="fragment_lecture_reviews">Lecture Reviews Fragment</string>
    <string name="fragment_course_overviews">Course Overviews Fragment</string>
    <string name="fragment_all">Notice All Fragment</string>
    <string name="fragment_my_messages">Notice My Messages Fragment</string>
    <string name="fragment_public_notices">Notice Public Notices Fragment</string>
    <string name="fragment_community">Notice Community Fragment</string>
    <!--<string name="fragment_blog">CS Blog Fragment</string>-->
    <!--<string name="fragment_instagram">CS Instagram Fragment</string>-->
    <!--<string name="fragment_facebook">CS Facebook Fragment</string>-->
    <string name="fragment_help">CS Help Fragment</string>
    <string name="fragment_account">ME Accounts Fragment</string>
    <string name="fragment_purchases">ME Purchases Fragment</string>
    <string name="fragment_terms_privacy">ME Terms / Privacy Fragment</string>
    <string name="fragment_settings">Settings Fragment</string>


</resources>
