<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_review"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/bottom_review" />

    <item
        android:id="@+id/bottom_notice"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/bottom_notice" />

    <item
        android:id="@+id/bottom_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/bottom_home" />

    <item
        android:id="@+id/bottom_lecture"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/bottom_lecture" />

    <item
        android:id="@+id/bottom_cs"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/bottom_cs" />

</menu>
